# the-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.production  LICENSE  Makefile  README.md  cloudbuild.yaml  deploy-guide.md  docker-compose.yml  lefthook.yml  pyproject.toml  raw_idea.md
.github/workflows/: test.yml
.kiro/specs/telegram-bot-improvements/: design.md  requirements.md  tasks.md
.kiro/steering/: best practice.md  migrations.md  product.md  structure.md  tech.md
alembic/: env.py
alembic/versions/: 30ef509e2503_merge_migration_heads.py  379d3cca8ac4_initial_migration_with_proper_schema.py  4e3a704959c8_add_user_timezone_field.py  5be5fe5ccc68_fix_user_settings_timestamps_defaults.py  65eacab2f822_.py  6e5d23f1c2ab_add_countdowns_table.py  7cc1a1bbfedb_initial_migration_with_all_tables.py  9b31f1c67e3a_add_tasks_table.py  9e55ed922174_remove_demo_timezone_field.py  cfcc2b66a9df_remove_auth_provider_and_external_id_.py
docs/: migrations.md
obsidian_vault/: Business Trip to Tokyo.md  Daily Journal - Jan 15.md  European Adventure.md  Family Reunion Trip.md  French Lesson Notes.md  Nested Tasks Test.md  Quick City Break.md  Spring Break Cruise.md  Summer Vacation Trip.md  Trip to Paris.md  Upcoming Business Meeting.md  Weekend Hiking Trip.md  Weekend Ski Trip.md  Work Conference Seattle.md  Work Project Alpha.md  test_functionality_verification.md
scripts/: README.md  apply_migrations.py  brower_use_test.py  cleanup_workflows.py  create_migration.py  deploy.sh  init_db.py  init_db_with_migrations.py  manage_migrations.py  prompt_evaluation.py  run-workflow-once.sh  run_daily_briefing.py  seed_users.py  test_oauth_flow.py
src/the_assistant/: __init__.py  main.py  settings.py  telegram_bot.py  user_settings.py  worker.py
src/the_assistant/activities/: __init__.py  google_activities.py  messages_activities.py  obsidian_activities.py  telegram_activities.py  ticktick_activities.py  user_activities.py  weather_activities.py
src/the_assistant/db/: __init__.py  database.py  models.py  service.py
src/the_assistant/integrations/: __init__.py  agent_tools.py  mcp_client.py
src/the_assistant/integrations/google/: client.py  credential_store.py  models.py  oauth_router.py  oauth_state.py
src/the_assistant/integrations/llm/: __init__.py  agent.py  countdown_parser.py  task_parser.py
src/the_assistant/models/: __init__.py  activity_models.py  base.py  google.py  obsidian.py  ticktick.py  weather.py
src/the_assistant/static/: auth-error.html  auth-success.html
src/the_assistant/user_settings/: __init__.py  router.py  store.py
src/the_assistant/utils/: config.py  user_registry.py
src/the_assistant/workflows/: daily_briefing.py
terraform/: main.tf
tests/: conftest.py
tests/integration/: test_error_handling.py  test_functionality_verification.py  test_task_management_integration.py  test_user_accounts_integration.py  test_vault_manager_integration.py
tests/integration/telegram/: __init__.py
tests/unit/: test_activities.py  test_config.py  test_countdown_parser.py  test_llm_activity.py  test_main.py  test_models.py  test_settings.py  test_task_parser.py  test_telegram_activities.py  test_user_activities.py  test_user_registry.py  test_user_service.py  test_user_settings_api.py  test_worker.py
(+39 files in other folders)
